--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta name="description" content="This is my resposive portfolio project">
     <!-- FONT AWESOME CDN LINK -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel='stylesheet' href='./style.css'>
+    <link rel='stylesheet' href='./style/style.css'>
   </head>
   <body>
     <!-- HEADER SECTION START -->
     <header class="header">
-        <a href="#home" class="logo">Portfolio.</a>
+        <div id="menu-btn" class="fas fa-bars"></div>
+        <a href="#home"  class="logo active">Portfolio</a>
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#home">home</a>
+            <a href="#about">about</a>
+            <a href="#services">services</a>
+            <a href="#portfolio">portfolio</a>
+            <a href="#contact">contact</a>
         </nav>
         <div class="follow">
             <a href="#" class="fab fa-facebook-f"></a>
@@ -29,5 +30,8 @@
         </div>
     </header>
      <!-- HEADER SECTION END -->
+
+     <!-- LINK TO JAVASCRIPT -->
+      <script src="./js/script.js"></script>
   </body>
 </html>
