--- a/index.html
+++ b/index.html
@@ -30,6 +30,118 @@
         </div>
     </header>
      <!-- HEADER SECTION END -->
+    <section class="home" id="home">
+      <div class="image">
+        <img src="./Assets/images/black-woman.avif" alt="black-woman">
+      </div>
+      <div class="content">
+        <h3>hi, i am Abradu Frimpong</h3>
+        <span>web designer and developer</span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <a href="#about" class="btn">about me</a>
+      </div>
+    </section>
+    <!-- ABOUT SECTION STARTS  -->
+    <section class="about" id="about">
+      <h1 class="heading"><span>biography</span></h1>
+      <div class="biography">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum earum fugiat animi exercitationem consequatur sed praesentium dolore, maiores, deleniti atque, totam consequuntur. Quaerat totam voluptatem distinctio nisi illo mollitia assumenda.</p>
+      </div>
+      <div class="bio">
+        <h3><span>name :</span>Abradu Frimpong</h3>
+        <h3><span>email :</span>tribillio@gmail.com</h3>
+        <h3><span>address :</span>Kumasi, Ghana</h3>
+        <h3><span>phone :</span>+233552343560</h3>
+        <h3><span>age :</span>22 years</h3>
+        <h3><span>experience :</span>2+ years of experience</h3>
+      </div>
+      <a href="#" class="btn">download CV</a>
+
+      <div class="skills">
+        <h1 class="heading"><span>skills</span></h1>
+        <div class="progress">
+          <div class="bar"><h3><span>HTML</span><span>95%</span></h3></div>
+          <div class="bar"><h3><span>HTML</span><span>80%</span></h3></div>
+          <div class="bar"><h3><span>JAVASCRIPT</span><span>65%</span></h3></div>
+          <div class="bar"><h3><span>PHP</span><span>80%</span></h3></div>
+        </div>
+      </div>
+      <div class="edu-exp">
+        <h1 class="heading"><span>education & experience</span></h1>
+        <div class="row">
+          <div class="box-container">
+            <h3 class="title">education</h3>
+            <div class="box">
+              <span>(2022 - 2023)</span>
+              <h3>web designer</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            </div>
+            <div class="box">
+              <span>(2023 - 2024)</span>
+              <h3>graphic designer</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            </div>
+          </div>
+          <div class="box-container">
+            <h3 class="title">experience</h3>
+            <div class="box">
+              <span>(2022 - 2023)</span>
+              <h3>frontend developer</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            </div>
+            <div class="box">
+              <span>(2023 - 2024)</span>
+              <h3>backend developer</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+
+    </section>
+    <!-- ABOUT SECTION ENDS -->
+
+    <!-- SERVICES SERVICE STARTS -->
+    <section class="services" id="services">
+      <h1 class="heading"><span>services</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <i class="fas fa-code"></i>
+          <h3>web development</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-paint-brush"></i>
+          <h3>graphic design</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="box">
+          <i class="fab fa-bootstrap"></i>
+          <h3>bootstrap</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="box">
+          <i class="fab fa-chart-line"></i>
+          <h3>seo marketing</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-bullhorn"></i>
+          <h3>digital marketing</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="box">
+          <i class="fab fa-wordpress"></i>
+          <h3>wordpress</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </section>
+
+
+
+    <!-- SERVICES SERVICE ENDS -->
 
      <!-- LINK TO JAVASCRIPT -->
       <script src="./js/script.js"></script>
